--- a/ClientService/src/index.html
+++ b/ClientService/src/index.html
@@ -1,16 +1,20 @@
 <!doctype html>
 <html lang="en" direction="ltr">
-<head>
-  <meta charset="utf-8">
-  <title>Vien Angular - Admin Template</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="assets/fonts/iconsmind-s/css/iconsminds.css">
-  <link rel="stylesheet" href="assets/fonts/simple-line-icons/css/simple-line-icons.css">
+<head>
+    <meta charset="utf-8">
+    <title>Vien Angular - Admin Template</title>
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="assets/fonts/iconsmind-s/css/iconsminds.css">
+    <link rel="stylesheet" href="assets/fonts/simple-line-icons/css/simple-line-icons.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Babylonica:300,400,400i,600,700">
 </head>
+
 <body class="rounded">
-  <app-root></app-root>
+    <app-root></app-root>
 </body>
+
 </html>
