--- a/ClientService/src/index.html
+++ b/ClientService/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Vien Angular - Admin Template</title>
+    <title>Clock In/Out Simulator</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
